--- a/src/main/resources/project/licenta/graphic.fxml
+++ b/src/main/resources/project/licenta/graphic.fxml
@@ -1,109 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="899.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Graphic">
-   <children>
-      <AnchorPane fx:id="paneMenu" prefHeight="78.0" prefWidth="900.0">
-         <children>
-            <ImageView fitHeight="104.0" fitWidth="900.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
-               <image>
-                  <Image url="@images/menu_background.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLogout" layoutX="783.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnBack" layoutX="651.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semesters" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icon.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLibrary" layoutX="540.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnLibraryOnClick" style="-fx-background-color: transparent;" text="Library" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnCosts" layoutX="462.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnCostsOnClick" style="-fx-background-color: transparent;" text="Costs" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneContent" prefHeight="490.0" prefWidth="900.0">
-         <children>
-            <ImageView fitHeight="427.0" fitWidth="900.0" pickOnBounds="true">
-               <image>
-                  <Image url="@images/login_background.jpg" />
-               </image>
-            </ImageView>
-            <AnchorPane layoutX="25.0" layoutY="27.0" prefHeight="303.0" prefWidth="323.0">
-               <children>
-                  <Label fx:id="lblError" layoutX="22.0" layoutY="14.0" />
-                  <AnchorPane layoutX="22.0" layoutY="52.0" prefHeight="35.0" prefWidth="243.0" style="-fx-background-color: #003d66;">
-                     <children>
-                        <ImageView fitHeight="38.0" fitWidth="40.0" layoutY="-1.0">
-                           <image>
-                              <Image url="@images/year_icon.png" />
-                           </image>
-                        </ImageView>
-                        <ComboBox fx:id="cmbType" layoutX="40.0" layoutY="3.0" onAction="#cmbTypeOnChange" prefHeight="26.0" prefWidth="196.0" promptText="Graphic time" />
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane fx:id="paneTime" layoutX="22.0" layoutY="103.0" prefHeight="35.0" prefWidth="243.0" style="-fx-background-color: #003d66;" visible="false">
-                     <children>
-                        <ImageView fitHeight="38.0" fitWidth="40.0" layoutY="-1.0">
-                           <image>
-                              <Image url="@images/calendar_icon.png" />
-                           </image>
-                        </ImageView>
-                        <ComboBox fx:id="cmbTime" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="196.0" promptText="Graphic time" visible="false" />
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane fx:id="paneStartDate" layoutX="21.0" layoutY="150.0" prefHeight="38.0" prefWidth="299.0" style="-fx-background-color: #003d66;" visible="false">
-                     <children>
-                        <DatePicker fx:id="dtpStartDate" layoutX="88.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" visible="false" />
-                        <Label layoutX="14.0" layoutY="6.0" text="Start date" textFill="#d9e9f2">
-                           <font>
-                              <Font name="Gabriola" size="20.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane fx:id="paneEndDate" layoutX="21.0" layoutY="197.0" prefHeight="38.0" prefWidth="299.0" style="-fx-background-color: #003d66;" visible="false">
-                     <children>
-                        <DatePicker fx:id="dtpEndDate" layoutX="88.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" visible="false" />
-                        <Label layoutX="14.0" layoutY="6.0" text="End date" textFill="#d9e9f2">
-                           <font>
-                              <Font name="Gabriola" size="20.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-                  <Button fx:id="btnShow" layoutX="274.0" layoutY="55.0" mnemonicParsing="false" onAction="#btnShowOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Show" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gadugi Bold" size="15.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-   </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0"
+      prefWidth="899.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="project.licenta.Graphic">
+    <children>
+        <AnchorPane fx:id="paneMenu" prefHeight="78.0" prefWidth="900.0">
+            <children>
+                <ImageView fitHeight="104.0" fitWidth="900.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@images/menu_background.jpg"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLogout" layoutX="783.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out"
+                        textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnBack" layoutX="651.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnBackOnClick"
+                        style="-fx-background-color: transparent;" text="Semesters" textAlignment="CENTER"
+                        textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true"
+                           preserveRatio="true">
+                    <image>
+                        <Image url="@images/icon.png"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLibrary" layoutX="540.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnLibraryOnClick" style="-fx-background-color: transparent;" text="Library"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnCosts" layoutX="462.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnCostsOnClick" style="-fx-background-color: transparent;" text="Costs"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="paneContent" prefHeight="490.0" prefWidth="900.0">
+            <children>
+                <ImageView fitHeight="427.0" fitWidth="900.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@images/login_background.jpg"/>
+                    </image>
+                </ImageView>
+                <AnchorPane layoutX="25.0" layoutY="27.0" prefHeight="303.0" prefWidth="323.0">
+                    <children>
+                        <Label fx:id="lblError" layoutX="22.0" layoutY="14.0"/>
+                        <AnchorPane layoutX="22.0" layoutY="52.0" prefHeight="35.0" prefWidth="243.0"
+                                    style="-fx-background-color: #003d66;">
+                            <children>
+                                <ImageView fitHeight="38.0" fitWidth="40.0" layoutY="-1.0">
+                                    <image>
+                                        <Image url="@images/year_icon.png"/>
+                                    </image>
+                                </ImageView>
+                                <ComboBox fx:id="cmbType" layoutX="40.0" layoutY="3.0" onAction="#cmbTypeOnChange"
+                                          prefHeight="26.0" prefWidth="196.0" promptText="Graphic time"/>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="paneTime" layoutX="22.0" layoutY="103.0" prefHeight="35.0" prefWidth="243.0"
+                                    style="-fx-background-color: #003d66;" visible="false">
+                            <children>
+                                <ImageView fitHeight="38.0" fitWidth="40.0" layoutY="-1.0">
+                                    <image>
+                                        <Image url="@images/calendar_icon.png"/>
+                                    </image>
+                                </ImageView>
+                                <ComboBox fx:id="cmbTime" layoutX="40.0" layoutY="3.0" prefHeight="26.0"
+                                          prefWidth="196.0" promptText="Graphic time" visible="false"/>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="paneStartDate" layoutX="21.0" layoutY="150.0" prefHeight="38.0"
+                                    prefWidth="299.0" style="-fx-background-color: #003d66;" visible="false">
+                            <children>
+                                <DatePicker fx:id="dtpStartDate" layoutX="88.0" layoutY="6.0" prefHeight="26.0"
+                                            prefWidth="210.0" visible="false"/>
+                                <Label layoutX="14.0" layoutY="6.0" text="Start date" textFill="#d9e9f2">
+                                    <font>
+                                        <Font name="Gabriola" size="20.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="paneEndDate" layoutX="21.0" layoutY="197.0" prefHeight="38.0"
+                                    prefWidth="299.0" style="-fx-background-color: #003d66;" visible="false">
+                            <children>
+                                <DatePicker fx:id="dtpEndDate" layoutX="88.0" layoutY="6.0" prefHeight="26.0"
+                                            prefWidth="210.0" visible="false"/>
+                                <Label layoutX="14.0" layoutY="6.0" text="End date" textFill="#d9e9f2">
+                                    <font>
+                                        <Font name="Gabriola" size="20.0"/>
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <Button fx:id="btnShow" layoutX="274.0" layoutY="55.0" mnemonicParsing="false"
+                                onAction="#btnShowOnClick" prefHeight="31.0" prefWidth="70.0"
+                                style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Show"
+                                textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gadugi Bold" size="15.0"/>
+                            </font>
+                        </Button>
+                    </children>
+                </AnchorPane>
+            </children>
+        </AnchorPane>
+    </children>
 </VBox>
