--- a/src/main/resources/project/licenta/login.fxml
+++ b/src/main/resources/project/licenta/login.fxml
@@ -1,98 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="469.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Login">
-   <children>
-      <ImageView fitHeight="469.0" fitWidth="807.0" layoutX="-1.0">
-         <image>
-            <Image url="@images/login_background.jpg" />
-         </image>
-      </ImageView>
-      <Button fx:id="btnRegister" layoutX="594.0" layoutY="274.0" mnemonicParsing="false" onAction="#btnRegisterOnClick" prefHeight="34.0" prefWidth="89.0" style="-fx-background-color: transparent;" text="Click here" textFill="NAVY">
-         <font>
-            <Font name="Gadugi Bold" size="12.0" />
-         </font>
-      </Button>
-      <AnchorPane layoutX="55.0" layoutY="42.0" prefHeight="374.0" prefWidth="328.0" style="-fx-border-color: #000080; -fx-border-width: 0 5 0 0;">
-         <children>
-            <AnchorPane layoutX="18.0" layoutY="132.0" prefHeight="34.0" prefWidth="249.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-                     <image>
-                        <Image url="@images/user_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtUser" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0" promptText="Username" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="16.0" layoutY="201.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <PasswordField fx:id="txtPass" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0" promptText="Password" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="17.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </PasswordField>
-                  <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-                     <image>
-                        <Image url="@images/pass_icon.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <Button fx:id="btnLogin" layoutX="69.0" layoutY="299.0" mnemonicParsing="false" onAction="#btnLoginOnClick" prefHeight="43.0" prefWidth="163.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Login" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label layoutX="56.0" layoutY="28.0" text="Please Login " textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="35.0" />
-               </font>
-            </Label>
-            <Label fx:id="label" layoutX="42.0" layoutY="98.0" />
-            <CheckBox fx:id="chkLogged" layoutX="42.0" layoutY="259.0" mnemonicParsing="false" text="Keep me logged in" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="12.0" />
-               </font>
-            </CheckBox>
-         </children>
-      </AnchorPane>
-      <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="512.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/icon.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="456.0" layoutY="129.0" text="Univerisity fees management" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="418.0" layoutY="190.0" text="start using a management system for your university fees &#10;situation, but also for other fees for students.&#10;" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="484.0" layoutY="282.0" prefHeight="18.0" prefWidth="139.0" text="Don't have a account?" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="12.0" />
-         </font>
-      </Label>
-   </children>
+<?import javafx.scene.text.*?>
+<AnchorPane prefHeight="469.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="project.licenta.Login">
+    <children>
+        <ImageView fitHeight="469.0" fitWidth="807.0" layoutX="-1.0">
+            <image>
+                <Image url="@images/login_background.jpg"/>
+            </image>
+        </ImageView>
+        <Button fx:id="btnRegister" layoutX="594.0" layoutY="274.0" mnemonicParsing="false"
+                onAction="#btnRegisterOnClick" prefHeight="34.0" prefWidth="89.0"
+                style="-fx-background-color: transparent;" text="Click here" textFill="NAVY">
+            <font>
+                <Font name="Gadugi Bold" size="12.0"/>
+            </font>
+        </Button>
+        <AnchorPane layoutX="55.0" layoutY="42.0" prefHeight="374.0" prefWidth="328.0"
+                    style="-fx-border-color: #000080; -fx-border-width: 0 5 0 0;">
+            <children>
+                <AnchorPane layoutX="18.0" layoutY="132.0" prefHeight="34.0" prefWidth="249.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                            <image>
+                                <Image url="@images/user_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtUser" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0"
+                                   promptText="Username"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="16.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="16.0" layoutY="201.0" prefHeight="38.0" prefWidth="266.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <PasswordField fx:id="txtPass" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0"
+                                       promptText="Password"
+                                       style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="17.0"/>
+                            </font>
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                        </PasswordField>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                            <image>
+                                <Image url="@images/pass_icon.png"/>
+                            </image>
+                        </ImageView>
+                    </children>
+                </AnchorPane>
+                <Button fx:id="btnLogin" layoutX="69.0" layoutY="299.0" mnemonicParsing="false"
+                        onAction="#btnLoginOnClick" prefHeight="43.0" prefWidth="163.0"
+                        style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Login"
+                        textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Label layoutX="56.0" layoutY="28.0" text="Please Login " textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="35.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="label" layoutX="42.0" layoutY="98.0"/>
+                <CheckBox fx:id="chkLogged" layoutX="42.0" layoutY="259.0" mnemonicParsing="false"
+                          text="Keep me logged in" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="12.0"/>
+                    </font>
+                </CheckBox>
+            </children>
+        </AnchorPane>
+        <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="512.0" layoutY="14.0" pickOnBounds="true"
+                   preserveRatio="true">
+            <image>
+                <Image url="@images/icon.png"/>
+            </image>
+        </ImageView>
+        <Label layoutX="456.0" layoutY="129.0" text="Univerisity fees management" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="20.0"/>
+            </font>
+        </Label>
+        <Label layoutX="418.0" layoutY="190.0"
+               text="start using a management system for your university fees &#10;situation, but also for other fees for students.&#10;"
+               textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi" size="15.0"/>
+            </font>
+        </Label>
+        <Label layoutX="484.0" layoutY="282.0" prefHeight="18.0" prefWidth="139.0" text="Don't have a account?"
+               textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="12.0"/>
+            </font>
+        </Label>
+    </children>
 </AnchorPane>
