--- a/src/main/resources/project/licenta/menu.fxml
+++ b/src/main/resources/project/licenta/menu.fxml
@@ -1,161 +1,187 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane fx:id="paneContent" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Menu">
-   <children>
-      <ImageView fitHeight="616.0" fitWidth="861.0" pickOnBounds="true">
-         <image>
-            <Image url="@images/login_background.jpg" />
-         </image>
-      </ImageView>
-      <AnchorPane fx:id="paneMenu" layoutY="19.0" prefHeight="56.0" prefWidth="764.0">
-         <children>
-            <ImageView fitHeight="98.0" fitWidth="861.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
-               <image>
-                  <Image url="@images/menu_background.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLogout" layoutX="747.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnAddSemester" layoutX="591.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnAddSemesterOnClick" style="-fx-background-color: transparent;" text="Add semester" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icon.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLibrary" layoutX="497.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnLibraryOnClick" style="-fx-background-color: transparent;" text="Library" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnCosts" layoutX="419.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnCostsOnClick" style="-fx-background-color: transparent;" text="Costs" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnGraphic" layoutX="319.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnGraphicOnClick" style="-fx-background-color: transparent;" text="Graphic" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneSemesterAdd" layoutX="374.0" layoutY="117.0" prefHeight="482.0" prefWidth="439.0" visible="false">
-         <children>
-            <Button fx:id="btnAdd" layoutX="157.0" layoutY="408.0" mnemonicParsing="false" onAction="#btnAddOnClick" prefHeight="46.0" prefWidth="213.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Add" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font></Button>
-            <AnchorPane layoutX="131.0" layoutY="55.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/university_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtUniv" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="University" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="131.0" layoutY="104.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/college_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtColl" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="College" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="132.0" layoutY="152.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/department_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtDep" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="Department" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="131.0" layoutY="201.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/year_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtUniv_year" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="University year" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="131.0" layoutY="255.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="Year of study" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-                  <Spinner fx:id="spnYear" layoutX="152.0" layoutY="6.0" prefHeight="26.0" prefWidth="100.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="131.0" layoutY="312.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="Semester" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-                  <Spinner fx:id="spnSem" layoutX="152.0" layoutY="6.0" prefHeight="26.0" prefWidth="100.0" />
-               </children>
-            </AnchorPane>
-            <Label fx:id="label" layoutX="104.0" layoutY="14.0" />
-            <AnchorPane layoutX="131.0" layoutY="362.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <CheckBox fx:id="chbTaxes" layoutX="161.0" layoutY="10.0" mnemonicParsing="false" />
-                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="with fee" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-      <ScrollPane fx:id="scpaneButtons" hbarPolicy="NEVER" layoutY="117.0" style="-fx-background-color: transparent; -fx-background: transparent;" vbarPolicy="NEVER">
-         <content>
-            <AnchorPane fx:id="paneButtons" prefHeight="494.0" prefWidth="374.0" />
-         </content>
-      </ScrollPane>
-   </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane fx:id="paneContent" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="project.licenta.Menu">
+    <children>
+        <ImageView fitHeight="616.0" fitWidth="861.0" pickOnBounds="true">
+            <image>
+                <Image url="@images/login_background.jpg"/>
+            </image>
+        </ImageView>
+        <AnchorPane fx:id="paneMenu" layoutY="19.0" prefHeight="56.0" prefWidth="764.0">
+            <children>
+                <ImageView fitHeight="98.0" fitWidth="861.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@images/menu_background.jpg"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLogout" layoutX="747.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out"
+                        textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnAddSemester" layoutX="591.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnAddSemesterOnClick" style="-fx-background-color: transparent;" text="Add semester"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true"
+                           preserveRatio="true">
+                    <image>
+                        <Image url="@images/icon.png"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLibrary" layoutX="497.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnLibraryOnClick" style="-fx-background-color: transparent;" text="Library"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnCosts" layoutX="419.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnCostsOnClick" style="-fx-background-color: transparent;" text="Costs"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnGraphic" layoutX="319.0" layoutY="7.0" mnemonicParsing="false"
+                        onAction="#btnGraphicOnClick" style="-fx-background-color: transparent;" text="Graphic"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="paneSemesterAdd" layoutX="374.0" layoutY="117.0" prefHeight="482.0" prefWidth="439.0"
+                    visible="false">
+            <children>
+                <Button fx:id="btnAdd" layoutX="157.0" layoutY="408.0" mnemonicParsing="false" onAction="#btnAddOnClick"
+                        prefHeight="46.0" prefWidth="213.0"
+                        style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Add" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <AnchorPane layoutX="131.0" layoutY="55.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/university_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtUniv" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0"
+                                   promptText="University"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="16.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="131.0" layoutY="104.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/college_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtColl" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0"
+                                   promptText="College"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="16.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="132.0" layoutY="152.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/department_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtDep" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0"
+                                   promptText="Department"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="16.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="131.0" layoutY="201.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/year_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtUniv_year" layoutX="34.0" layoutY="-1.0" prefHeight="35.0"
+                                   prefWidth="231.0" promptText="University year"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Times New Roman Bold" size="16.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="131.0" layoutY="255.0" prefHeight="38.0" prefWidth="266.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="Year of study"
+                               textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                        <Spinner fx:id="spnYear" layoutX="152.0" layoutY="6.0" prefHeight="26.0" prefWidth="100.0"/>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="131.0" layoutY="312.0" prefHeight="38.0" prefWidth="266.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="Semester" textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                        <Spinner fx:id="spnSem" layoutX="152.0" layoutY="6.0" prefHeight="26.0" prefWidth="100.0"/>
+                    </children>
+                </AnchorPane>
+                <Label fx:id="label" layoutX="104.0" layoutY="14.0"/>
+                <AnchorPane layoutX="131.0" layoutY="362.0" prefHeight="38.0" prefWidth="266.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <CheckBox fx:id="chbTaxes" layoutX="161.0" layoutY="10.0" mnemonicParsing="false"/>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="with fee" textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                    </children>
+                </AnchorPane>
+            </children>
+        </AnchorPane>
+        <ScrollPane fx:id="scpaneButtons" hbarPolicy="NEVER" layoutY="117.0"
+                    style="-fx-background-color: transparent; -fx-background: transparent;" vbarPolicy="NEVER">
+            <content>
+                <AnchorPane fx:id="paneButtons" prefHeight="494.0" prefWidth="374.0"/>
+            </content>
+        </ScrollPane>
+    </children>
 </AnchorPane>
