--- a/src/main/resources/project/licenta/register.fxml
+++ b/src/main/resources/project/licenta/register.fxml
@@ -1,120 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="485.0" prefWidth="774.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Register">
-   <children>
-      <ImageView fitHeight="550.0" fitWidth="867.0" layoutX="-64.0" layoutY="-30.0" pickOnBounds="true">
-         <image>
-            <Image url="@images/login_background.jpg" />
-         </image>
-      </ImageView>
-      <Label layoutX="70.0" layoutY="51.0" text="Create Account" textAlignment="CENTER" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="35.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnRegister" layoutX="110.0" layoutY="408.0" mnemonicParsing="false" onAction="#btnRegisterOnClick" prefHeight="38.0" prefWidth="195.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Register" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="20.0" />
-         </font>
-      </Button>
-      <AnchorPane layoutX="75.0" layoutY="167.0" prefHeight="34.0" prefWidth="249.0" style="-fx-background-color: #003d66;">
-         <children>
-            <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-               <image>
-                  <Image url="@images/user_icon.png" />
-               </image>
-            </ImageView>
-            <TextField fx:id="txtUser" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0" promptText="Username" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-               <font>
-                  <Font name="Times New Roman Bold" size="16.0" />
-               </font>
-            </TextField>
-         </children>
-      </AnchorPane>
-      <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="507.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/icon.png" />
-         </image>
-      </ImageView>
-      <AnchorPane layoutX="75.0" layoutY="231.0" prefHeight="34.0" prefWidth="249.0" style="-fx-background-color: #003d66;">
-         <children>
-            <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-               <image>
-                  <Image url="@images/mail_icon.png" />
-               </image>
-            </ImageView>
-            <TextField fx:id="txtEmail" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0" promptText="Email" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-               <font>
-                  <Font name="Times New Roman Bold" size="16.0" />
-               </font>
-            </TextField>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="72.0" layoutY="286.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-         <children>
-            <PasswordField fx:id="txtPass" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0" promptText="Password" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-               <font>
-                  <Font name="Times New Roman Bold" size="17.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </PasswordField>
-            <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-               <image>
-                  <Image url="@images/pass_icon.png" />
-               </image>
-            </ImageView>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="72.0" layoutY="344.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
-         <children>
-            <PasswordField fx:id="txtPassNew" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0" promptText="Confirm password" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-               <font>
-                  <Font name="Times New Roman Bold" size="17.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </PasswordField>
-            <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
-               <image>
-                  <Image url="@images/pass_icon.png" />
-               </image>
-            </ImageView>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="391.0" layoutY="90.0" prefHeight="352.0" prefWidth="7.0" style="-fx-background-color: #000080;" />
-      <Label layoutX="545.0" layoutY="110.0" text="Welcome" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="434.0" layoutY="167.0" text="Please fill in all the fields so that you can register" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="478.0" layoutY="220.0" text="Do you have a account?" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnLogin" layoutX="605.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnLoginOnClick" style="-fx-background-color: transparent;" text="Click here" textFill="NAVY">
-         <font>
-            <Font name="Gadugi Bold" size="12.0" />
-         </font>
-      </Button>
-      <Label fx:id="label" layoutX="75.0" layoutY="132.0" />
-   </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane prefHeight="485.0" prefWidth="774.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="project.licenta.Register">
+    <children>
+        <ImageView fitHeight="550.0" fitWidth="867.0" layoutX="-64.0" layoutY="-30.0" pickOnBounds="true">
+            <image>
+                <Image url="@images/login_background.jpg"/>
+            </image>
+        </ImageView>
+        <Label layoutX="70.0" layoutY="51.0" text="Create Account" textAlignment="CENTER" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="35.0"/>
+            </font>
+        </Label>
+        <Button fx:id="btnRegister" layoutX="110.0" layoutY="408.0" mnemonicParsing="false"
+                onAction="#btnRegisterOnClick" prefHeight="38.0" prefWidth="195.0"
+                style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Register" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="20.0"/>
+            </font>
+        </Button>
+        <AnchorPane layoutX="75.0" layoutY="167.0" prefHeight="34.0" prefWidth="249.0"
+                    style="-fx-background-color: #003d66;">
+            <children>
+                <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                    <image>
+                        <Image url="@images/user_icon.png"/>
+                    </image>
+                </ImageView>
+                <TextField fx:id="txtUser" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0"
+                           promptText="Username"
+                           style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                    <font>
+                        <Font name="Times New Roman Bold" size="16.0"/>
+                    </font>
+                </TextField>
+            </children>
+        </AnchorPane>
+        <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="507.0" layoutY="14.0" pickOnBounds="true"
+                   preserveRatio="true">
+            <image>
+                <Image url="@images/icon.png"/>
+            </image>
+        </ImageView>
+        <AnchorPane layoutX="75.0" layoutY="231.0" prefHeight="34.0" prefWidth="249.0"
+                    style="-fx-background-color: #003d66;">
+            <children>
+                <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                    <image>
+                        <Image url="@images/mail_icon.png"/>
+                    </image>
+                </ImageView>
+                <TextField fx:id="txtEmail" layoutX="34.0" layoutY="4.0" prefHeight="30.0" prefWidth="231.0"
+                           promptText="Email" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                    <font>
+                        <Font name="Times New Roman Bold" size="16.0"/>
+                    </font>
+                </TextField>
+            </children>
+        </AnchorPane>
+        <AnchorPane layoutX="72.0" layoutY="286.0" prefHeight="38.0" prefWidth="266.0"
+                    style="-fx-background-color: #003d66;">
+            <children>
+                <PasswordField fx:id="txtPass" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0"
+                               promptText="Password"
+                               style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                    <font>
+                        <Font name="Times New Roman Bold" size="17.0"/>
+                    </font>
+                    <opaqueInsets>
+                        <Insets/>
+                    </opaqueInsets>
+                </PasswordField>
+                <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                    <image>
+                        <Image url="@images/pass_icon.png"/>
+                    </image>
+                </ImageView>
+            </children>
+        </AnchorPane>
+        <AnchorPane layoutX="72.0" layoutY="344.0" prefHeight="38.0" prefWidth="266.0"
+                    style="-fx-background-color: #003d66;">
+            <children>
+                <PasswordField fx:id="txtPassNew" layoutX="39.0" layoutY="5.0" prefHeight="31.0" prefWidth="231.0"
+                               promptText="Confirm password"
+                               style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                    <font>
+                        <Font name="Times New Roman Bold" size="17.0"/>
+                    </font>
+                    <opaqueInsets>
+                        <Insets/>
+                    </opaqueInsets>
+                </PasswordField>
+                <ImageView fitHeight="30.0" fitWidth="40.0" layoutY="4.0">
+                    <image>
+                        <Image url="@images/pass_icon.png"/>
+                    </image>
+                </ImageView>
+            </children>
+        </AnchorPane>
+        <AnchorPane layoutX="391.0" layoutY="90.0" prefHeight="352.0" prefWidth="7.0"
+                    style="-fx-background-color: #000080;"/>
+        <Label layoutX="545.0" layoutY="110.0" text="Welcome" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="20.0"/>
+            </font>
+        </Label>
+        <Label layoutX="434.0" layoutY="167.0" text="Please fill in all the fields so that you can register"
+               textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi" size="15.0"/>
+            </font>
+        </Label>
+        <Label layoutX="478.0" layoutY="220.0" text="Do you have a account?" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="12.0"/>
+            </font>
+        </Label>
+        <Button fx:id="btnLogin" layoutX="605.0" layoutY="216.0" mnemonicParsing="false" onAction="#btnLoginOnClick"
+                style="-fx-background-color: transparent;" text="Click here" textFill="NAVY">
+            <font>
+                <Font name="Gadugi Bold" size="12.0"/>
+            </font>
+        </Button>
+        <Label fx:id="label" layoutX="75.0" layoutY="132.0"/>
+    </children>
 </AnchorPane>
