--- a/src/main/resources/project/licenta/semesterfee.fxml
+++ b/src/main/resources/project/licenta/semesterfee.fxml
@@ -1,155 +1,197 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Semesterfee">
-   <children>
-      <ImageView fitHeight="680.0" fitWidth="952.0" layoutX="-5.0" layoutY="-1.0" pickOnBounds="true">
-         <image>
-            <Image url="@images/login_background.jpg" />
-         </image>
-      </ImageView>
-      <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="66.0" prefWidth="936.0">
-         <children>
-            <ImageView fitHeight="92.0" fitWidth="952.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
-               <image>
-                  <Image url="@images/menu_background.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLogout" layoutX="818.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" prefHeight="43.0" prefWidth="106.0" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnBack" layoutX="703.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semester" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="63.0" fitWidth="195.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icon.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnSemesterfee" layoutX="422.0" layoutY="-2.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2" visible="false">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label fx:id="lblMenu" layoutX="198.0" layoutY="9.0" textFill="#ece3e3">
-               <font>
-                  <Font name="Gadugi" size="16.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/menu.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-            <Label fx:id="lblMenuClose" layoutX="198.0" layoutY="9.0" textFill="#ece3e3">
-               <font>
-                  <Font name="Gadugi" size="16.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/menu.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-         </children>
-      </AnchorPane>
-      <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" textFill="#d9e9f2">
-         <font>
-            <Font name="Gadugi Bold" size="20.0" />
-         </font></Label>
-      <AnchorPane fx:id="panePaid" layoutX="471.0" layoutY="119.0" prefHeight="237.0" prefWidth="466.0" visible="false">
-         <children>
-            <Label fx:id="lblError" layoutX="14.0" layoutY="14.0" />
-            <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="439.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="210.0" text="Payment date of the semester fee" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-                  <DatePicker fx:id="dtpPaid" layoutX="223.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="92.0" layoutY="119.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="43.0" fitWidth="44.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/payment_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtAmount" layoutX="54.0" layoutY="5.0" prefHeight="26.0" prefWidth="196.0" promptText="Payment amount in RON" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Gadugi Bold" size="12.0" />
-                     </font></TextField>
-               </children>
-            </AnchorPane>
-            <Button fx:id="btnNewTaxes" layoutX="197.0" layoutY="178.0" mnemonicParsing="false" onAction="#btnNewTaxesOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneReminder" layoutX="471.0" layoutY="357.0" prefHeight="237.0" prefWidth="466.0" visible="false">
-         <children>
-            <Label fx:id="lblErrorReminder" layoutX="14.0" layoutY="14.0" />
-            <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="430.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <Label layoutX="50.0" prefHeight="38.0" prefWidth="138.0" text=" Payment deadline" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-                  <DatePicker fx:id="dtpReminder" layoutX="223.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="5.0" layoutY="119.0" prefHeight="35.0" prefWidth="434.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <Label layoutX="42.0" layoutY="1.0" text="How many days before" textFill="#d9e9f2">
-                     <font>
-                        <Font name="Gabriola" size="20.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="cmbDays" layoutX="217.0" layoutY="5.0" prefHeight="26.0" prefWidth="210.0" />
-               </children>
-            </AnchorPane>
-            <Button fx:id="btnNewReminder" layoutX="197.0" layoutY="178.0" mnemonicParsing="false" onAction="#btnNewReminderOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneSlider" layoutY="94.0" prefHeight="584.0" prefWidth="240.0" style="-fx-background-color: #00134d;">
-         <children>
-            <Button fx:id="btnPaid" layoutX="-1.0" layoutY="132.0" mnemonicParsing="false" onAction="#btnPaidOnClick" prefHeight="31.0" prefWidth="248.0" style="-fx-background-color: transparent;" text="To add a semester fee" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnReminder" layoutX="1.0" layoutY="165.0" mnemonicParsing="false" onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="247.0" style="-fx-background-color: transparent;" text="To add a reminder" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-   </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="project.licenta.Semesterfee">
+    <children>
+        <ImageView fitHeight="680.0" fitWidth="952.0" layoutX="-5.0" layoutY="-1.0" pickOnBounds="true">
+            <image>
+                <Image url="@images/login_background.jpg"/>
+            </image>
+        </ImageView>
+        <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="66.0" prefWidth="936.0">
+            <children>
+                <ImageView fitHeight="92.0" fitWidth="952.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@images/menu_background.jpg"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLogout" layoutX="818.0" layoutY="-2.0" mnemonicParsing="false"
+                        onAction="#btnLogoutOnClick" prefHeight="43.0" prefWidth="106.0"
+                        style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnBack" layoutX="703.0" layoutY="-2.0" mnemonicParsing="false"
+                        onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semester"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <ImageView fitHeight="63.0" fitWidth="195.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/icon.png"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnSemesterfee" layoutX="422.0" layoutY="-2.0" mnemonicParsing="false"
+                        style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER"
+                        textFill="#d9e9f2" visible="false">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Label fx:id="lblMenu" layoutX="198.0" layoutY="9.0" textFill="#ece3e3">
+                    <font>
+                        <Font name="Gadugi" size="16.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@images/menu.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Label>
+                <Label fx:id="lblMenuClose" layoutX="198.0" layoutY="9.0" textFill="#ece3e3">
+                    <font>
+                        <Font name="Gadugi" size="16.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@images/menu.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Label>
+            </children>
+        </AnchorPane>
+        <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" textFill="#d9e9f2">
+            <font>
+                <Font name="Gadugi Bold" size="20.0"/>
+            </font>
+        </Label>
+        <AnchorPane fx:id="panePaid" layoutX="471.0" layoutY="119.0" prefHeight="237.0" prefWidth="466.0"
+                    visible="false">
+            <children>
+                <Label fx:id="lblError" layoutX="14.0" layoutY="14.0"/>
+                <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="439.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="210.0"
+                               text="Payment date of the semester fee" textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                        <DatePicker fx:id="dtpPaid" layoutX="223.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0"/>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="92.0" layoutY="119.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/payment_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <TextField fx:id="txtAmount" layoutX="54.0" layoutY="5.0" prefHeight="26.0" prefWidth="196.0"
+                                   promptText="Payment amount in RON"
+                                   style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                            <font>
+                                <Font name="Gadugi Bold" size="12.0"/>
+                            </font>
+                        </TextField>
+                    </children>
+                </AnchorPane>
+                <Button fx:id="btnNewTaxes" layoutX="197.0" layoutY="178.0" mnemonicParsing="false"
+                        onAction="#btnNewTaxesOnClick" prefHeight="31.0" prefWidth="70.0"
+                        style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="paneReminder" layoutX="471.0" layoutY="357.0" prefHeight="237.0" prefWidth="466.0"
+                    visible="false">
+            <children>
+                <Label fx:id="lblErrorReminder" layoutX="14.0" layoutY="14.0"/>
+                <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="430.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <Label layoutX="50.0" prefHeight="38.0" prefWidth="138.0" text=" Payment deadline"
+                               textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                        <DatePicker fx:id="dtpReminder" layoutX="223.0" layoutY="6.0" prefHeight="26.0"
+                                    prefWidth="210.0"/>
+                    </children>
+                </AnchorPane>
+                <AnchorPane layoutX="5.0" layoutY="119.0" prefHeight="35.0" prefWidth="434.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <Label layoutX="42.0" layoutY="1.0" text="How much time before" textFill="#d9e9f2">
+                            <font>
+                                <Font name="Gabriola" size="20.0"/>
+                            </font>
+                        </Label>
+                        <ComboBox fx:id="cmbDays" layoutX="217.0" layoutY="5.0" prefHeight="26.0" prefWidth="210.0"/>
+                    </children>
+                </AnchorPane>
+                <Button fx:id="btnNewReminder" layoutX="197.0" layoutY="178.0" mnemonicParsing="false"
+                        onAction="#btnNewReminderOnClick" prefHeight="31.0" prefWidth="70.0"
+                        style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="paneSlider" layoutY="94.0" prefHeight="584.0" prefWidth="240.0"
+                    style="-fx-background-color: #00134d;">
+            <children>
+                <Button fx:id="btnReminder" layoutX="8.0" layoutY="183.0" mnemonicParsing="false"
+                        onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="214.0"
+                        style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;"
+                        text="   Add a reminder" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@images/reminder_white.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button fx:id="btnPaid" layoutX="8.0" layoutY="93.0" mnemonicParsing="false" onAction="#btnPaidOnClick"
+                        prefHeight="31.0" prefWidth="214.0"
+                        style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;"
+                        text="   Add a semester fee" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@images/money_white.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
