--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -1,152 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
-   <children>
-      <ImageView fitHeight="610.0" fitWidth="933.0" layoutX="-5.0" layoutY="69.0" pickOnBounds="true">
-         <image>
-            <Image url="@images/login_background.jpg" />
-         </image>
-      </ImageView>
-      <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="56.0" prefWidth="838.0">
-         <children>
-            <ImageView fitHeight="102.0" fitWidth="931.0" layoutX="-13.0" layoutY="-36.0" pickOnBounds="true">
-               <image>
-                  <Image url="@images/menu_background.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnLogout" layoutX="788.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" prefHeight="43.0" prefWidth="106.0" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnBack" layoutX="655.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semesters" textAlignment="CENTER" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="63.0" fitWidth="195.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icon.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnSemesterfee" layoutX="506.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2" visible="false">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label fx:id="lblMenu" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
-               <font>
-                  <Font name="Gadugi" size="16.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/menu.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-            <Label fx:id="lblMenuClose" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
-               <font>
-                  <Font name="Gadugi" size="16.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/menu.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-         </children>
-      </AnchorPane>
-      <ScrollPane fx:id="scpaneButtons" hbarPolicy="NEVER" layoutX="29.0" layoutY="128.0" prefHeight="491.0" prefWidth="413.0" style="-fx-background: transparent; -fx-background-color: transparent;" vbarPolicy="NEVER">
-         <content>
-            <AnchorPane fx:id="paneButtons" prefHeight="489.0" prefWidth="218.0">
-               <children>
-                  <Label fx:id="lblSemester" layoutX="14.0" layoutY="14.0" text="asd" />
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
-      <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="102.0" prefWidth="450.0" visible="false">
-         <children>
-            <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/Subject_icon.png" />
-                     </image>
-                  </ImageView>
-                  <ComboBox fx:id="cmbSubject" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="241.0" promptText="Subject name" />
-               </children>
-            </AnchorPane>
-            <Button fx:id="btnNewSubject" layoutX="358.0" layoutY="37.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-            <Label fx:id="lblNew" layoutX="28.0" layoutY="6.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneSlider" layoutY="95.0" prefHeight="582.0" prefWidth="257.0" style="-fx-background-color: #00134d;">
-         <children>
-            <Button fx:id="btnActual" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a current subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-               <graphic>
-                  <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/subject_white.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="btnOptional" layoutX="14.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a optional subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-               <graphic>
-                  <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/subject_white.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="btnPrevious" layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a previous subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-               <graphic>
-                  <ImageView fx:id="image3" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/subject_white.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="panePrevious" layoutX="451.0" layoutY="271.0" prefHeight="200.0" prefWidth="450.0" visible="false">
-         <children>
-            <Button fx:id="btnPreviousSubject" layoutX="179.0" layoutY="146.0" mnemonicParsing="false" onAction="#btnPreviousSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-            <Label fx:id="lblPrevious" layoutX="36.0" layoutY="14.0" />
-         </children>
-      </AnchorPane>
-   </children>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="project.licenta.Subjects_view">
+    <children>
+        <ImageView fitHeight="610.0" fitWidth="933.0" layoutX="-5.0" layoutY="69.0" pickOnBounds="true">
+            <image>
+                <Image url="@images/login_background.jpg"/>
+            </image>
+        </ImageView>
+        <Label fx:id="lblSemester" layoutX="37.0" layoutY="112.0" text="asd"/>
+        <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="56.0" prefWidth="838.0">
+            <children>
+                <ImageView fitHeight="102.0" fitWidth="931.0" layoutX="-13.0" layoutY="-36.0" pickOnBounds="true">
+                    <image>
+                        <Image url="@images/menu_background.jpg"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnLogout" layoutX="788.0" layoutY="-2.0" mnemonicParsing="false"
+                        onAction="#btnLogoutOnClick" prefHeight="43.0" prefWidth="106.0"
+                        style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnBack" layoutX="655.0" layoutY="-2.0" mnemonicParsing="false"
+                        onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semesters"
+                        textAlignment="CENTER" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <ImageView fitHeight="63.0" fitWidth="195.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/icon.png"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnSemesterfee" layoutX="506.0" layoutY="-2.0" mnemonicParsing="false"
+                        onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee"
+                        textAlignment="CENTER" textFill="#d9e9f2" visible="false">
+                    <font>
+                        <Font name="Gadugi Bold" size="20.0"/>
+                    </font>
+                </Button>
+                <Label fx:id="lblMenu" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
+                    <font>
+                        <Font name="Gadugi" size="16.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@images/menu.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Label>
+                <Label fx:id="lblMenuClose" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
+                    <font>
+                        <Font name="Gadugi" size="16.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@images/menu.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Label>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="102.0" prefWidth="450.0"
+                    visible="false">
+            <children>
+                <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0"
+                            style="-fx-background-color: #003d66;">
+                    <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                            <image>
+                                <Image url="@images/Subject_icon.png"/>
+                            </image>
+                        </ImageView>
+                        <ComboBox fx:id="cmbSubject" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="241.0"
+                                  promptText="Subject name"/>
+                    </children>
+                </AnchorPane>
+                <Button fx:id="btnNewSubject" layoutX="358.0" layoutY="37.0" mnemonicParsing="false"
+                        onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0"
+                        style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                </Button>
+                <Label fx:id="lblNew" layoutX="28.0" layoutY="6.0"/>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="panePrevious" layoutX="451.0" layoutY="271.0" prefHeight="200.0" prefWidth="450.0"
+                    visible="false">
+            <children>
+                <Button fx:id="btnPreviousSubject" layoutX="179.0" layoutY="146.0" mnemonicParsing="false"
+                        onAction="#btnPreviousSubjectOnClick" prefHeight="31.0" prefWidth="70.0"
+                        style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                </Button>
+                <Label fx:id="lblPrevious" layoutX="36.0" layoutY="14.0"/>
+            </children>
+        </AnchorPane>
+        <ScrollPane fx:id="scpaneButtons" hbarPolicy="NEVER" layoutX="28.0" layoutY="183.0" prefHeight="491.0"
+                    prefWidth="413.0" style="-fx-background: transparent; -fx-background-color: transparent;"
+                    vbarPolicy="NEVER">
+            <content>
+                <AnchorPane fx:id="paneButtons" prefHeight="489.0" prefWidth="218.0"/>
+            </content>
+        </ScrollPane>
+        <AnchorPane fx:id="paneSlider" layoutY="95.0" prefHeight="582.0" prefWidth="257.0"
+                    style="-fx-background-color: #00134d;">
+            <children>
+                <Button fx:id="btnActual" layoutX="14.0" layoutY="51.0" mnemonicParsing="false"
+                        onAction="#btnActualOnClick" prefHeight="38.0" prefWidth="214.0"
+                        style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;"
+                        text="Add a current subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@images/subject_white.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button fx:id="btnOptional" layoutX="14.0" layoutY="134.0" mnemonicParsing="false"
+                        onAction="#btnOptionalOnClick" prefHeight="38.0" prefWidth="214.0"
+                        style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;"
+                        text="Add a optional subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@images/subject_white.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button fx:id="btnPrevious" layoutX="14.0" layoutY="207.0" mnemonicParsing="false"
+                        onAction="#btnPreviousOnClick" prefHeight="38.0" prefWidth="214.0"
+                        style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;"
+                        text="Add a previous subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                    <font>
+                        <Font name="Gadugi Bold" size="15.0"/>
+                    </font>
+                    <graphic>
+                        <ImageView fx:id="image3" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@images/subject_white.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
